--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Share/Layout.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Share/Layout.cshtml
@@ -110,35 +110,35 @@
 
                                     <li class="position-relative mr-2 slicknav_collapsed slicknav_parent">
                                         <a href="#" role="menuitem" aria-haspopup="true" tabindex="-1" class="slicknav_item slicknav_row">
-                                            <a href="@Url.Action("ListProducts", "Products", new {id = 40})" tabindex="-1">Hóa chất<i class="ti-angle-down"></i></a>
+                                            <a href="@Url.Action("ListProducts", "Products", new { id = 40 })" tabindex="-1">Hóa chất<i class="ti-angle-down"></i></a>
                                             <span class="slicknav_arrow">►</span>
                                         </a><ul class="dropdown slicknav_hidden" role="menu" aria-hidden="true" style="display: none;">
                                             @foreach (TypeProduct type in dsHoachat)
                                             {
-                                                <li><a href="@Url.Action("ListProducts", "Products", new {id = type.Id_type})" role="menuitem" tabindex="-1">@type.Name_type</a></li>
+                                                <li><a href="@Url.Action("ListProducts", "Products", new { id = type.Id_type })" role="menuitem" tabindex="-1">@type.Name_type</a></li>
                                             }
                                         </ul>
                                     </li>
                                     <li class="position-relative mr-2 slicknav_collapsed slicknav_parent">
                                         <a href="#" role="menuitem" aria-haspopup="true" tabindex="-1" class="slicknav_item slicknav_row">
-                                            <a href="@Url.Action("ListProducts", "Products", new {id = 50})" tabindex="-1">Dụng cụ<i class="ti-angle-down"></i></a>
+                                            <a href="@Url.Action("ListProducts", "Products", new { id = 50 })" tabindex="-1">Dụng cụ<i class="ti-angle-down"></i></a>
                                             <span class="slicknav_arrow">►</span>
                                         </a><ul class="dropdown slicknav_hidden" role="menu" aria-hidden="true" style="display: none;">
                                             @foreach (TypeProduct type in dsDungcu)
                                             {
-                                                <li><a href="@Url.Action("ListProducts", "Products", new {id = type.Id_type})" role="menuitem" tabindex="-1">@type.Name_type</a></li>
+                                                <li><a href="@Url.Action("ListProducts", "Products", new { id = type.Id_type })" role="menuitem" tabindex="-1">@type.Name_type</a></li>
                                             }
 
                                         </ul>
                                     </li>
                                     <li class="position-relative mr-2 slicknav_collapsed slicknav_parent">
                                         <a href="#" role="menuitem" aria-haspopup="true" tabindex="-1" class="slicknav_item slicknav_row">
-                                            <a href="@Url.Action("ListProducts", "Products", new {id = 60})" tabindex="-1">Thiết bị<i class="ti-angle-down"></i></a>
+                                            <a href="@Url.Action("ListProducts", "Products", new { id = 60 })" tabindex="-1">Thiết bị<i class="ti-angle-down"></i></a>
                                             <span class="slicknav_arrow">►</span>
                                         </a><ul class="dropdown slicknav_hidden" role="menu" aria-hidden="true" style="display: none;">
                                             @foreach (TypeProduct type in dsThietbi)
                                             {
-                                                <li><a href="@Url.Action("ListProducts", "Products", new {id = type.Id_type})" role="menuitem" tabindex="-1">@type.Name_type</a></li>
+                                                <li><a href="@Url.Action("ListProducts", "Products", new { id = type.Id_type })" role="menuitem" tabindex="-1">@type.Name_type</a></li>
                                             }
 
                                         </ul>
@@ -170,38 +170,50 @@
                         <div class="right-bar">
                             <!-- Search Form -->
                             <div class="right-bar-item shopping d-inline-block mr-4">
-                                <a href="/Cart/ShoppingCart" class="single-icon"><i class="fa fa-shopping-cart"></i><span class="total-count">2</span></a>
+                                @{
+                                    int total = 0;
+                                    var list = (List<Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Models.CartItem>)Session["CartSession"];
+                                    int quantityItem = ((list == null) ? 0 : list.Count());
+                                }
+                                <a href="/Cart/ShoppingCart" class="single-icon"><i class="fa fa-shopping-cart"></i><span class="total-count">@quantityItem</span></a>
                                 <!-- Shopping Item -->
                                 <div class="shopping-item">
+
                                     <div class="dropdown-cart-header">
-                                        <span>2 Sản phẩm</span>
+                                        <span>@((list == null)?0:quantityItem) Sản phẩm</span>
                                         <a class="float-right" href="/Cart/ShoppingCart">Xem giỏ hàng</a>
                                     </div>
                                     <ul class="shopping-list">
                                         <!-- Cart Item -->
-                                        <li>
-                                            <a href="#" class="remove" title="Remove this item"><i class="fa fa-remove"></i></a>
-                                            <a class="cart-img" href="#"><img src="../images/hoa_chat/acid_bazo/acid_citric/acid_citric_70x70.jpg" alt="#"></a>
-                                            <h4><a href="#">Sulfuric acid 95%</a></h4>
-                                            <p class="quantity">
-                                                1x - <span class="amount">1,000,000đ</span>
-                                            </p>
-                                        </li>
 
-                                        <!-- Cart Item -->
-                                        <li>
-                                            <a href="#" class="remove" title="Remove this item"><i class="fa fa-remove"></i></a>
-                                            <a class="cart-img" href="#"><img src="../images/hoa_chat/acid_bazo/acid_sulfuric/acid_sulfuric_01_70x70.jpg" alt="#"></a>
-                                            <h4><a href="#">Methanol GR Merck</a></h4>
-                                            <p class="quantity">
-                                                1x - <span class="amount">1,000,000đ</span>
-                                            </p>
-                                        </li>
+                                        @{
+                                            if (list == null)
+                                            {
+                                                <h1>Ko co gi</h1>
+                                            }
+                                            else
+                                            {
+                                                foreach (Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Models.CartItem item in list)
+                                                {
+                                                    <li>
+                                                        <a href="#" class="remove" title="Remove this item"><i class="fa fa-remove"></i></a>
+                                                        <a class="cart-img" href="#"><img src="@item.Product.Url_img_product" alt="#"></a>
+                                                        <h4><a href="#">@item.Product.Name_product</a></h4>
+                                                        <p class="quantity">
+                                                            @item.Quantity x - <span class="amount">@string.Format("{0:0,0 vnđ}", item.Product.Current_price)</span>
+                                                            @{total += item.Quantity * item.Product.Current_price;}
+                                                        </p>
+                                                    </li>
+                                                }
+                                                                }
+                                        }
+
+
                                     </ul>
                                     <div class="bottom text-center">
                                         <div class="total">
                                             <span>Tổng cộng</span>
-                                            <span class="total-amount">2,000,000đ</span>
+                                            <span class="total-amount">@string.Format("{0:0,0 vnđ}",total)</span>
                                         </div>
                                         <a href="/Checkout/Checkout" class="btn">Thanh toán</a>
                                     </div>
